🐛Fix Dark Mode

--- a/extension/firefox/src/inject/colors/apply-variables.css
+++ b/extension/firefox/src/inject/colors/apply-variables.css
@@ -1,4 +1,4 @@
-body, .header-bar, #breadcrumbs, .item-group-container, .ui-tabs:not(#record_media_tab) .ui-tabs-panel:not(#record_media_tab), #context-list-holder, #undated-events, #minical, #calendar-app .fc-month-view .fc-body, #calendar-drag-and-drop-container .fc-month-view .fc-body, .message-list .messages>li, .module-sequence-footer .module-sequence-footer-content, .discussion-reply-box, .discussion_entry, #content, .ic-Layout-contentMain, .planner-day, .EmptyDays-styles__nothingPlannedContent, .planner-empty-days h2, .PlannerHeader, table[style="margin: 1.5rem 0px;"] thead tr th, table[style="margin: 1.5rem 0px;"] tbody tr th, table[style="margin: 1.5rem 0px;"] tbody tr td, .reply-btn, .ui-datepicker .ui-datepicker-time, .ui-dialog .ui-dialog-buttonpane, .ui-dialog .ui-datepicker .ui-datepicker-time, .ui-datepicker .ui-dialog .ui-datepicker-time, .discussions-v2__container-image, .ic-Table td, .recent_activity>li, .recent-activity-header, #grades_summary th.title, span[dir="ltr"]  span:not([style="border-width: 0px; top: 0px; left: 0px; position: absolute; transform: translateX(216px) translateY(144px) translateZ(0px);"]):not(#ColorPicker__Apply span), .submission-details-header__heading-and-grades, .planner-day h2, .ic-Table td, .mini-cal-header, .mini_calendar, .ColorPicker__Container.with-border, #calendar-app .fc-agendaWeek-view .fc-body, #calendar-drag-and-drop-container .fc-agendaWeek-view .fc-body, .event-details, .agenda-wrapper, .tox .tox-menubar, .tox .tox-toolbar, .tox .tox-toolbar__overflow, .tox .tox-toolbar__primary, .canvas-rce__skins--root, .tox:not(.tox-tinymce-inline) .tox-editor-header, #tinymce, .ic-flash-info, .ic-flash-success, .ic-flash-warning, .ic-flash-error, .ui-dialog.ui-widget-content, .ic-DashboardCard__header_content, .ic-DashboardCard__header_content, .ic-DashboardCard, .DashboardCardMenu__ColorPicker, div[role="tabpanel"] div ul[aria-label="Dashboard Card Movement Menu"], #unfavorite, ul[role="menu"], .quiz-submission, .question .text, #questions.assessing, #canvasplus-alert-settings-update, #ic-app-class-search-results, .unpublished_courses_redesign .ic-DashboardCard__box__header, .ic-notification__content {
+body, .header-bar, #breadcrumbs, .fOyUs_bGBk .eHiXd_bGBk .eHiXd_bXiG .eHiXd_ycrn .eHiXd_bNlk .eHiXd_cuTS, .cDMBL_bGBk, .dNoYT_bGBk, .dCppM_ddES, .comments, .fOyUs_bGBk, #breadcrumbs, .item-group-container, .Opportunity-styles__root, .item-group-container, .ui-tabs:not(#record_media_tab) .ui-tabs-panel:not(#record_media_tab), #context-list-holder, #undated-events, #minical, #calendar-app .fc-month-view .fc-body, #calendar-drag-and-drop-container .fc-month-view .fc-body, .message-list .messages>li, .module-sequence-footer .module-sequence-footer-content, .discussion-reply-box, .discussion_entry, #content, .ic-Layout-contentMain, .planner-day, .EmptyDays-styles__nothingPlannedContent, .planner-empty-days h2, .PlannerHeader, table[style="margin: 1.5rem 0px;"] thead tr th, table[style="margin: 1.5rem 0px;"] tbody tr th, table[style="margin: 1.5rem 0px;"] tbody tr td, .reply-btn, .ui-datepicker .ui-datepicker-time, .ui-dialog .ui-dialog-buttonpane, .ui-dialog .ui-datepicker .ui-datepicker-time, .ui-datepicker .ui-dialog .ui-datepicker-time, .discussions-v2__container-image, .ic-Table td, .recent_activity>li, .recent-activity-header, #grades_summary th.title, span[dir="ltr"]  span:not([style="border-width: 0px; top: 0px; left: 0px; position: absolute; transform: translateX(216px) translateY(144px) translateZ(0px);"]):not(#ColorPicker__Apply span), .submission-details-header__heading-and-grades, .planner-day h2, .ic-Table td, .mini-cal-header, .mini_calendar, .ColorPicker__Container.with-border, #calendar-app .fc-agendaWeek-view .fc-body, #calendar-drag-and-drop-container .fc-agendaWeek-view .fc-body, .event-details, .agenda-wrapper, .tox .tox-menubar, .tox .tox-toolbar, .tox .tox-toolbar__overflow, .tox .tox-toolbar__primary, .canvas-rce__skins--root, .tox:not(.tox-tinymce-inline) .tox-editor-header, #tinymce, .ic-flash-info, .ic-flash-success, .ic-flash-warning, .ic-flash-error, .ui-dialog.ui-widget-content, .ic-DashboardCard__header_content, .ic-DashboardCard__header_content, .ic-DashboardCard, .DashboardCardMenu__ColorPicker, div[role="tabpanel"] div ul[aria-label="Dashboard Card Movement Menu"], #unfavorite, ul[role="menu"], .quiz-submission, .question .text, #questions.assessing, #canvasplus-alert-settings-update, #ic-app-class-search-results, .unpublished_courses_redesign .ic-DashboardCard__box__header, .ic-notification__content {
   background: var(--cpt-dark-background-color) !important;
 }
 
@@ -65,7 +65,7 @@ table[style="margin: 1.5rem 0px;"] tbody tr td span span button span span span s
   border: none;
 }
 
-.btn:hover, .Button:hover:not(.Button.Button--icon-action-rev.Button--large.mobile-header-hamburger):not(Button.Button--icon-action-rev.Button--large.mobile-header-arrow), .ui-button:hover, #immersive_reader_mount_point div button:hover span, #planner-today-btn:hover, #undated-events .event:hover, .tox .tox-split-button .tox-tbtn.tox-split-button__chevron{
+.btn:hover, .OyUs_bGBk, .Button:hover:not(.Button.Button--icon-action-rev.Button--large.mobile-header-hamburger):not(Button.Button--icon-action-rev.Button--large.mobile-header-arrow), .ui-button:hover, #immersive_reader_mount_point div button:hover span, #planner-today-btn:hover, #undated-events .event:hover, .tox .tox-split-button .tox-tbtn.tox-split-button__chevron{
   color: var(--cpt-dark-interactable-hover-text-color) !important;
   background-color: var(--cpt-dark-interactable-hover-color) !important;
   border-color: var(--cpt-dark-interactable-hover-border-color) !important;
@@ -147,7 +147,7 @@ label[for="course_select_menu"] span span span span span span span, label[for="g
 
 
 label[for="course_select_menu"] span span span span span span span span input, label[for="grading_period_select_menu"] span span span span span span span span input, label[for="assignment_sort_order_select_menu"] span span span span span span span span input, .dropdown-menu li a span, .dropdown-menu li a, .mini_calendar .day, #minical .fc-widget-content, .feature-flag-wrapper div table tbody tr td div button, .ic-DashboardCard__action:not(:hover), .DashboardCardMenu__MovementItem:not(:hover), span[dir="ltr"] span:not([style="border-width: 0px; top: 0px; left: 0px; position: absolute; transform: translateX(216px) translateY(144px) translateZ(0px);"]):not(#ColorPicker__Apply span) {
-  color: var(--ic-brand-font-color-dark);
+  color: var(--ic-brand-font-color-dark) !important;;
 }
 
 .mini_calendar .day.today, .fc-unthemed .fc-today {
@@ -302,7 +302,6 @@ svg[aria-labelledby="LoadingSpinner"] g circle:nth-child(2) {
   background: var(--cpt-dark-dashboard-header) !important;
 }
 
-.toolbarView .headerBar {
-  border: inherit;
-  background: inherit;
+#tab-ukzxzauUkPu3 {
+  background: var(--cpt-dark-background-header) !important;
 }
